--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "modalBox": "~1.0.2",
     "reconnectingWebsocket": "",
     "diff-dom": "~2.0.0",
-    "marked": "~0.3.5"
+    "marked": "~0.3.5",
+    "es6-promise": "~3.1.2"
   }
 }
